--- a/lib/src/localization/l10n/app_en.arb
+++ b/lib/src/localization/l10n/app_en.arb
@@ -7,6 +7,8 @@
   "about": "About",
   "fomet": "Fomet",
   "fometSubtitle": "Growing equipment",
+  "errorWidgetTitle": "Oh no!",
+  "errorWidgetSubitle": "Something went wrong. Ensure to have an active internet connection!",
   "infoParagraph1": "Fomet SpA is a company which produces and sells special and natural fertilizers for professional agriculture since 1973; however, the first experimental tests of production go back to 1969. From the beginning, the philosophy of work and development of products has been the application of natural systems and methods during the production phase in the industrial headquarter.\n\nThese methods still include the supervised collection of organic samples of manure and the processing of them through a procedure of exsiccation-concentration-humidification for several months in buffered and covered environment, with the subsequent formulation of multiple fertiliser products able to satisfy the most different and difficult demands of the field.",
   "infoParagraph2": "This kind of approach has always been followed and pursued and it allowed fertilizers to be considered not only as a contribution of nutritional units (a fundamental aspect for regular growth and production of the crop), but also as a more spread and important element concerning the fertility of the soil. This idea has been enhanced over the years and extended to the usage in new and different organic samples, apart from manure, but with the same guarantee of authenticity and of contents.",
   "infoParagraph3": "Fomet SpA aims to realise products that are able to add biological activity and humic constituents to the soil, in order to combat the increasing decline of soil production and the progressive deconstruction of lands.",   
@@ -28,5 +30,12 @@
   "question6": "Can biological/biodynamic products be used for conventional agriculture?",
   "answer6": "Yes, using organic products for agriculture with conventional management promotes the correct administration of soil fertility. It is strongly suggested to increase the dosage of organic fertilizers with the aim to establish the allocation of organic matter in conventional fields. The rise of organic matter in the soil allows the decrease of environmental impact like leaching and immobilization of nutritional elements in the field. The usage of organic fertilizers improves the efficiency of said nutritional elements and also of the soil in the long run.",
   "question7": "How should the product be stored?",
-  "answer7": "It is important to store the products in fresh and dry locations, safe from water and bad weather. They must also be kept away from children and animals. Wrong use can be harmful. Please follow the instructions shown on the packaging."
+  "answer7": "It is important to store the products in fresh and dry locations, safe from water and bad weather. They must also be kept away from children and animals. Wrong use can be harmful. Please follow the instructions shown on the packaging.",
+  "productsLoadingText": "Loading products...",
+  "search": "Search",
+  "qrCode": "Scan a product's QR code",
+  "productsCatalog": "Explore the products catalog",
+  "recentSearches": "Recent searches",
+  "or": "otherwise",
+  "homeIntroText": "From the very start, we applied natural methods and work systems on an industrial scale. One of our goals is to create products which bring biological activity and humic parts in order to counter the increasing productive decline of soils, their progressive decay and difficulty of cultivation."
 }
