--- a/lib/src/localization/l10n/app_it.arb
+++ b/lib/src/localization/l10n/app_it.arb
@@ -7,6 +7,8 @@
   "about": "Info",
   "fomet": "Fomet",
   "fometSubtitle": "Growing equipment",
+  "errorWidgetTitle": "Oh no!",
+  "errorWidgetSubitle": "Qualcosa è andato storto. Assicurati di essere connesso ad internet!",
   "infoParagraph1": "FOMET SpA è una Società che produce e commercializza fertilizzanti speciali e naturali per l’agricoltura professionale dal 1973, anche se occorre ricordare che le prime prove sperimentali di produzione sono iniziate nel 1969. Sin dal principio la filosofia di lavoro e sviluppo dei propri prodotti è stata l’applicazione di metodi e sistemi naturali alla realizzazione in sede industriale.\n\nMetodi che prevedono ancora oggi il ritiro controllato di matrici organiche da letami, la lavorazione delle medesime con processo monitorato di essiccazione-concentrazione-umificazione per molti mesi in ambienti completamente coperti e tamponati, la conseguente formulazione di molteplici prodotti fertilizzanti atti a soddisfare le più diverse e difficili esigenze di campagna.",
   "infoParagraph2": "Questa impostazione, da sempre perseguita e ricercata, ha permesso di ragionare sulla proposta dei propri fertilizzanti non solo come puro e semplice apporto di unità nutrizionali (peraltro aspetto fondamentale per una regolare crescita e produzione della coltura) ma anche ad un più esteso ed altrettanto fondamentale aspetto relativo alla fertilità del terreno. Il concetto quindi negli anni è stato poi ampliato ed esteso nell’utilizzo di matrici organiche nuove e diverse, oltre ai letami, ma con la stessa garanzia di genuinità e scurezza dei contenuti.",
   "infoParagraph3": "FOMET SpA si propone infatti di realizzare prodotti che apportano al terreno anche attività biologica e componenti umiche al fine di contrastare il sempre maggiore declino produttivo dei terreni, la loro progressiva destrutturazione, la loro sempre maggiore difficoltà di lavorazione.", 
@@ -28,5 +30,12 @@
   "question6": "Posso usare i prodotti biologici/biodinamici in agricoltura convenzionale?",
   "answer6": "Si, utilizzare organici all’interno di terreni agricoli a gestione convenzionale favorisce la corretta gestione della fertilità del terreno. È vivamente consigliato aumentare l’impiego di fertilizzanti organici allo scopo di ristabilire la dotazione di sostanza organica nei terreni convenzionali.\n\nL’aumento di sostanza organica nel terreno, permette di ridurre l’impatto ambientale di fenomeni come: lisciviazione e immobilizzazione di elementi nutritivi nel terreno.L’impiego di fertilizzanti organici migliora l’efficienza di utilizzo degli elementi nutritivi, migliorando la fertilità del suolo nel lungo periodo.",
   "question7": "Come devo stoccare il prodotto?",
-  "answer7": "È importante stoccare il prodotto in luoghi freschi e asciutti, al riparo dall’acqua e dalle intemperie. Importante tenere lontano dalla portata di animali e bambini. L’uso scorretto può essere nocivo. Rispettare le indicazioni riportate sulle confezioni."
+  "answer7": "È importante stoccare il prodotto in luoghi freschi e asciutti, al riparo dall’acqua e dalle intemperie. Importante tenere lontano dalla portata di animali e bambini. L’uso scorretto può essere nocivo. Rispettare le indicazioni riportate sulle confezioni.",
+  "productsLoadingText": "Caricamento proditti...",
+  "search": "Ricerca",
+  "qrCode": "Scannerizza il codice QR di un prodotto",
+  "productsCatalog": "Esplora il catalogo dei prodotti",
+  "recentSearches": "Ricerche recenti",
+  "or": "oppure",
+  "homeIntroText": "Sin dal principio, si sono voluti applicare su scala industriale metodi e sistemi di lavoro naturali. Uno dei nostri obiettivi è quello di realizzare prodotti che apportano al terreno anche attività biologica e componenti umiche al fine di contrastare il sempre maggiore declino produttivo dei terreni, la loro progressiva destrutturazione e difficoltà di lavorazione."
 }
