--- a/lib/src/localization/l10n/app_it.arb
+++ b/lib/src/localization/l10n/app_it.arb
@@ -40,5 +40,7 @@
   "homeIntroText": "Sin dal principio, si sono voluti applicare su scala industriale metodi e sistemi di lavoro naturali. Uno dei nostri obiettivi è quello di realizzare prodotti che apportano al terreno anche attività biologica e componenti umiche al fine di contrastare il sempre maggiore declino produttivo dei terreni, la loro progressiva destrutturazione e difficoltà di lavorazione.",
   "category": "Categoria",
   "variety": "Varietà",
-  "kind": "Tipo"
+  "kind": "Tipo",
+  "qrCodeHint": "Attendi l'avvio della fotocamera e inquadra il codice QR.",
+  "qrCodeError": "Codice QR non valido. Riprova!"
 }
