--- a/lib/src/localization/l10n/app_en.arb
+++ b/lib/src/localization/l10n/app_en.arb
@@ -6,12 +6,13 @@
   "faq": "FAQ",
   "about": "About",
   "fomet": "Fomet",
+  "homePage": "Home page",
   "fometSubtitle": "Growing equipment",
   "errorWidgetTitle": "Oh no!",
   "errorWidgetSubitle": "Something went wrong. Ensure to have an active internet connection!",
   "infoParagraph1": "Fomet SpA is a company which produces and sells special and natural fertilizers for professional agriculture since 1973; however, the first experimental tests of production go back to 1969. From the beginning, the philosophy of work and development of products has been the application of natural systems and methods during the production phase in the industrial headquarter.\n\nThese methods still include the supervised collection of organic samples of manure and the processing of them through a procedure of exsiccation-concentration-humidification for several months in buffered and covered environment, with the subsequent formulation of multiple fertiliser products able to satisfy the most different and difficult demands of the field.",
   "infoParagraph2": "This kind of approach has always been followed and pursued and it allowed fertilizers to be considered not only as a contribution of nutritional units (a fundamental aspect for regular growth and production of the crop), but also as a more spread and important element concerning the fertility of the soil. This idea has been enhanced over the years and extended to the usage in new and different organic samples, apart from manure, but with the same guarantee of authenticity and of contents.",
-  "infoParagraph3": "Fomet SpA aims to realise products that are able to add biological activity and humic constituents to the soil, in order to combat the increasing decline of soil production and the progressive deconstruction of lands.",   
+  "infoParagraph3": "Fomet SpA aims to realise products that are able to add biological activity and humic constituents to the soil, in order to combat the increasing decline of soil production and the progressive deconstruction of lands.",
   "infoParagraph4": "The whole variety of products thus includes the most qualified category of organic, organic-mineral and corrective fertilizers, both for conventional, biological and biodinamic agriculture. In this way, the choice can be made among products in powder-form, granular-form, pellet-form or liquid-form. In particular, the usage of these products allows to:",
   "infoParagraph5": "the progressive release of nutritional elements (N, P, K, Mg, Microelements) to avoid sudden lacks of balance to guarantee a constant growth of the vegetative structure;",
   "infoParagraph6": "the possibility of fertilization in autumnal periods without lacks of nutritional elements caused by leaching;",
