feat: added some more tests

--- a/lib/src/localization/l10n/app_en.arb
+++ b/lib/src/localization/l10n/app_en.arb
@@ -60,5 +60,6 @@
   "retry": "Retry",
   "conventional": "Conventional",
   "biologic": "Biologic",
-  "biodynamic": "Biodynamic"
+  "biodynamic": "Biodynamic",
+  "noProductsFound": "No products found!"
 }
