--- a/lib/src/localization/l10n/app_it.arb
+++ b/lib/src/localization/l10n/app_it.arb
@@ -60,5 +60,6 @@
   "retry": "Riprova",
   "conventional": "Convenzionale",
   "biologic": "Biologico",
-  "biodynamic": "Biodinamico"
+  "biodynamic": "Biodinamico",
+  "noProductsFound": "Nessun prodotto trovato!"
 }
